# cv_rag_local

./: .gitignore  README.md  docker-compose.yml  requirements.txt
chatbot_api/: Dockerfile  pyproject.toml
chatbot_api/src/: entrypoint.sh  main.py
chatbot_api/src/agents/: cv_rag_agent.py
chatbot_api/src/chains/: cv_question_chain.py
chatbot_api/src/models/: cv_rag_query.py
chatbot_frontend/: pyproject.toml
chatbot_frontend/src/: main.py
chromadb_etl/: Dockerfile  pyproject.toml  write_data_to_db.py
chromadb_etl/src/: entrypoint.sh  simple_rag.py  write_data_to_db.py  write_data_to_db_2.py  write_data_to_db_3.py
data/: Richard_Csanaki_CV.txt
test/: monitor_folder.py  read_pdf.ipynb  test_phi_decoder.py  test_phi_hf.py  test_phi_ollama.py
test_api/: cv_question_chain.py  main.py  query_model.py  test_chroma.py  test_json.ipynb  word_count.py
