[project]
name = "chatbot_api"
version = "0.1"
dependencies = [
    "asyncio",
    "fastapi",
    "langchain",
    "langchain-openai",
    "langchain-community",
    "langchainhub",
    "langchain-chroma",
    "chromadb",
    "numpy",
    "openai",
    "opentelemetry-api",
    "pydantic",
    "uvicorn"
]

[project.optional-dependencies]
dev = ["black", "flake8"]