[project]
name = "chatbot_api"
version = "0.1"
dependencies = [
    "asyncio",
    "fastapi[all]",
    "langchain",
    "langchain-core",
    "langchain-openai",
    "langchain-community",
    "langchainhub",
    "langchain-chroma",
    "chromadb",
    "numpy",
    "openai",
    "opentelemetry-api",
    "pydantic",
    "uvicorn",
    "ollama"
]

[project.optional-dependencies]
dev = ["black", "flake8"]