[project]
name = "chatbot_api"
version = "0.1"
dependencies = [
    "asyncio",
    "fastapi==0.109.0",
    "langchain==0.1.16",
    "langchain-core==0.1.46",
    "langchain-community==0.0.34",
    "langchainhub==0.1.14",
    "chromadb==0.5.0",
    "numpy==1.26.4",
    "opentelemetry-api==1.24.0",
    "pydantic==1.10.15",
    "uvicorn==0.25.0",
    "ollama==0.1.9",
    "ragatouille==0.0.8.post2"
]

[project.optional-dependencies]
dev = ["black", "flake8"]